@@ -1,5 +1,10 @@
 2007-08-13  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_menu_add_vpn_menu): sort VPN connections
+
+2007-08-13  Dan Williams  <dcbw@redhat.com>
+
 	Patch from Michael Biebl <biebl@debian.org>
 
 	* po/POTFILES.in
